[metadata]
name = buildDotsProject
version = 1.1.0
author = Yoav Levy
author_email= yoav130193@gmail.com
description = #TODO - change
long_description = file: README.md
long_description_content_type = text/markdown; charset=UTF-8
home_page = https://github.com/3b1b/manim #TODO - change
project_urls =
    Bug Tracker = https://github.com/3b1b/manim/issues #TODO - change
    Documentation = https://3b1b.github.io/manim/ #TODO - change
    Source Code = https://github.com/3b1b/manim #TODO - change
license = MIT

[options]
packages = find:
include_package_data=True
install_requires =
    numpy
    pandas
    matplotlib

[options.entry_points]
console_scripts =
    buildDots = main.__main__:main
    manim-render = main.__main__:main
